tests/fixtures/no-color/one_past.txt
error: expected `.`, `=`
 --> Cargo.toml:1:5
  |
1 | asdf
  |     ^
  |
